server side processing with sort and search

--- a/ma/Views/Item/Index.cshtml
+++ b/ma/Views/Item/Index.cshtml
@@ -24,7 +24,10 @@
         $('#itemsTable').DataTable({
             "processing": true,
             "serverSide": true,
-            "ajax": '@Url.Action("ItemsTableProcessing", "Item")',
+            "ajax": {
+                "url": '@Url.Action("ItemsTableProcessing", "Item")',
+                "type": "POST"
+            },
             "columns": [
                 { data: 'id' },
                 { data: 'itemName' },
