--- a/ma/Views/Shared/_Layout.cshtml
+++ b/ma/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/datatables.min.js"></script>
+        <script src="~/js/jszip.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
