--- a/ma/Views/Item/Index.cshtml
+++ b/ma/Views/Item/Index.cshtml
@@ -26,7 +26,7 @@
                 <p id="pForOtherText">Other Text</p>
                 <p id="pForQty">Qty</p>
                 <div id="div-for-image"></div>
-                <a id="edit-btn" href="#" class="btn btn-primary btn-md active" role="button">Edit</a>
+                <a id="edit-btn" href="#" class="btn btn-default btn-md" role="button">Edit</a>
             </div>
            
         </div>
