--- a/ma/Views/Shared/_Layout.cshtml
+++ b/ma/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/datatables.min.css" />
+        <link rel="stylesheet" href="~/css/sweetalert2.min.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -34,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Item" asp-action="Index">Items</a></li>
                 </ul>
                 <!--<partial name="_LoginPartial" />-->
                 @await Html.PartialAsync("_LoginPartial")
@@ -57,6 +59,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/datatables.min.js"></script>
         <script src="~/js/jszip.min.js"></script>
+        <script src="~/js/sweetalert2.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
