--- a/ma/Views/Item/AddItem.cshtml
+++ b/ma/Views/Item/AddItem.cshtml
@@ -52,3 +52,15 @@
 
 
 
+@section Scripts {
+    <script type="text/javascript">
+
+        var addItemResult = '@ViewBag.AddResult';
+        if (addItemResult.length > 0) {
+            swal(addItemResult);
+        }
+
+    </script>
+
+
+}
