--- a/ma/Views/Item/EditItem.cshtml
+++ b/ma/Views/Item/EditItem.cshtml
@@ -63,12 +63,17 @@
     </div>
     <div class="col-md-4">
         <p>Reminder Dates</p>
-        <form asp-action="SelectReminderDays">
+        <form id="formNumDates" asp-action="SelectReminderDays">
             <select asp-for="SelectNum" asp-items="@Model.NumOfDates">
                 <option>Select one number</option>
             </select>
             <input type="submit" value="Set" class="btn btn-default" />
             </form>
+
+
+        <div id="reminder-div">
+
+        </div>
     </div>
 </div>
 @section Scripts {
@@ -119,7 +124,24 @@
              var editItemResult = '@ViewBag.EditResult';
            if (editItemResult.length > 0) {
             swal(editItemResult);
-        }
+            }
+
+            $("#formNumDates").submit(function (e) {
+                e.preventDefault();
+                $.ajax({
+                    method: "POST",
+                    url: '@Url.Action("SelectReminderDays", "Item")',
+                    dataType: "json",
+                    data: $('#formNumDates').serialize(),
+                     success: function (result) {
+                       
+
+                    },
+                    error: function (xhr, status, error) {
+
+                    }
+                });
+            });
 
 
             $("#delete-btn").click(function () {
