--- a/ma/Views/Item/ListReminderPartial.cshtml
+++ b/ma/Views/Item/ListReminderPartial.cshtml
@@ -3,7 +3,9 @@
 @for (int i = 0; i < Model.Count(); i++)
 {
 
-
+<div class="form-group">
+    <input asp-for="[@i].ReminderDate" id="reminder-@i" class="form-control" />
+</div>
 
 }
 
