--- a/ma/Views/Item/ListReminderPartial.cshtml
+++ b/ma/Views/Item/ListReminderPartial.cshtml
@@ -1,8 +1,12 @@
-﻿@model IEnumerable<ma.ViewModel.ReminderDateViewModel>
-@for (int i = 0; i < Model.Count(); i++)
-{
-<div class="form-group">
-    <input asp-for="[@i].ReminderDate" id="reminder-@i" class="form-control" />
-</div>
-}
+﻿@model IList<ma.ViewModel.ReminderDateViewModel>
+<form id="formRemindDates" asp-action="SaveReminderDays">
+    @for (int i = 0; i < Model.Count(); i++)
+    {
+        <div class="form-group">
+            <label class="control-label">Reminder Date </label>
+            <input asp-for="@Model[@i].ReminderDate" id="reminder-@i" class="form-control" />
+        </div>
+    }
+         <input type="submit" value="Save" class="btn btn-default" />
 
+</form>
