minor update 5/1/2019 852pm

--- a/ma/Views/Item/Index.cshtml
+++ b/ma/Views/Item/Index.cshtml
@@ -7,7 +7,7 @@
 
 <!-- Button trigger modal -->
 
-
+<a href="Item/AddItem">Add Item</a>
 <!-- Modal -->
 <div class="modal fade" id="viewInfoModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
